--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -10,7 +10,7 @@
 </h:head>
 <h:body>
     <h:form>
-			<h:inputText value="${usuarioBean.a}">
+			<h:inputText value="${usuarioBean.usuario.nome}">
 			</h:inputText>
 			<h:commandButton id="listar" 
 				action="${usuarioBean.listarUsuarios}" 
